# PSO_test

./: LICENSE  README.md
interface/: ImageProcessInterface.html  MotionControlInterface.html  README.md  WalkingInterface.html  index.html  pso.html
interface/css/: InterfaceTable.css  style.css
interface/js/: Interface.js  InterfaceTable.js  gamepadtest.js
interface/resources/TKU_ICLab/: TKUICLAB02_new.ai  TKUICLAB03.ai  finalLogo.ai
src/imageprocess/: CMakeLists.txt  README.md  package.xml
src/imageprocess/launch/: gazebo_imageprocess_11th.launch  gazebo_imageprocess_robotcup.launch  gazebo_imageprocess_twowheeler.launch  imageprocess.launch
src/imageprocess/src/Coordinate/: tcoordinate.cpp  tcoordinate.hpp
src/imageprocess/src/DrawImage/: DrawImage.cpp  DrawImage.hpp
src/imageprocess/src/ImageBase/: imagebase.cpp  imagebase.hpp
src/imageprocess/src/ModelBase/: TColorFunctionUnit.cpp  TColorFunctionUnit.hpp  modelparameter.h  tdataunit.cpp  tdataunit.hpp  tmodelunit.cpp  tmodelunit.hpp
src/imageprocess/src/main/: imagemain.cpp  imagemain.h
src/package/: CMakeLists.txt  README.md  package.xml
src/package/include/motionpackage/: motionpackage.h
src/package/src/: motionpackage.cpp
src/strategy/: CMakeLists.txt
src/strategy/Kidsize_HuroCup/: basketballinfo.cpp  loadparameter.cpp  pso.cpp  strategy_main.cpp
src/strategy/Parameter/: BB.ini  BB2021.ini  BBnew.ini  BBw.ini  CameraSet.ini  ColorModelData.ini  ContinuousMove.ini  Continuous_Back.ini  Move.ini  Single_Parameter.ini  Single_third.ini  Single_wood.ini  Speed.ini  Throw.ini
src/strategy/Parameter/sector/: 1.ini  10.ini  100.ini  101.ini  11.ini  111.ini  1110.ini  1111.ini  1112.ini  1114.ini  1115.ini  1116.ini  1117.ini  1118.ini  1119.ini  1120.ini  1130.ini  1133.ini  1140.ini  1150.ini  1160.ini  118.ini  12.ini  1218.ini  13.ini  14.ini  15.ini  16.ini  17.ini  18.ini  19.ini  2.ini  20.ini  2110.ini  2114.ini  2118.ini  2801.ini  3.ini  3311.ini  3312.ini  (+34 more)
src/strategy/include/strategy/: basketballinfo.h  loadparameter.h  pso.h  strategy_main.h
src/strategy/msg/: particle.msg
src/tku_libs/: CMakeLists.txt  README.md  package.xml  robotcup_info.yaml
src/tku_libs/include/tku_libs/: RobotCupInfo.h  Ros2MultiCommunication.h  RosCommunication.h  TKU_tool.h  WalkContinuouse.h  modelinfo.h  strategy_info.h
src/tku_libs/libGameControllerClient/robocup_referee/: constants.cpp  game_state.cpp  main.cpp  referee_client.cpp  robot.cpp  team.cpp  time_stamp.cpp  utilities.cpp
src/tku_libs/libGameControllerClient/sockets/: udp_broadcast.cpp
src/tku_libs/libKidsize/: TKU_tool.cpp
src/tku_libs/libgazebo/: modelinfo.cpp
src/tku_libs/libstrategy/: RobotCupInfo.cpp  Ros2MultiCommunication.cpp  RosCommunication.cpp  WalkContinuouse.cpp  strategy_info.cpp
src/tku_msgs/: CMakeLists.txt  README.md  package.xml
src/tku_msgs/msg/Localization/: RobotPos.msg  SetGoalPoint.msg  SetRobotPos.msg
src/tku_msgs/msg/Ros2MultiCommunication/: CharacterInfo.msg  ObjectInfo.msg  Ros2MultiCommunication.msg  WitchData.msg
src/tku_msgs/msg/motionpackage/: HeadPackage.msg  InterfaceSend2Sector.msg  Parameter_message.msg  SandHandSpeed.msg  SaveMotion.msg  SaveMotionVector.msg  SensorPackage.msg  SensorSet.msg  SingleMotorData.msg  Walking_message.msg  callback.msg
src/tku_msgs/msg/simmotionpackage/: IKinfo_message.msg
src/tku_msgs/msg/usb_cam/: camera.msg
src/tku_msgs/msg/vision/: ButtonColorForm.msg  CameraId.msg  ColorArray.msg  ColorData.msg  Distance.msg  DrawImage.msg  FeaturePoint.msg  HSVValue.msg  ImageLengthData.msg  ImageProcess.msg  LabelModelObjectList.msg  LineData.msg  ObjectList.msg  ObservationData.msg  SoccerData.msg  SoccerDataList.msg
src/tku_msgs/msg/walkinggait/: wave.msg  (+4 more)
src/usb_cam/: CMakeLists.txt  README.md  package.xml
src/usb_cam/nodes/: usb_cam_node.cpp
src/usb_cam/src/: tdataunit.cpp
src/walkinggait/: CMakeLists.txt  README.md  package.xml
src/walkinggait/ParameterInfo/: parameterinfo.cpp
src/walkinggait/src/: walkinggait.cpp
(+20 files in other folders)
